--- a/src/components/card.css
+++ b/src/components/card.css
@@ -15,6 +15,22 @@
   animation: flip 0.3s;
 }
 
+.back {
+  transition: all 0.3s;
+  transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
+  color: rgba(255, 255, 255, 1);
+}
+
+.front {
+  transition: all 0.3s;
+  transform: translateY(0px) rotate3d(0, 1, 0, 180deg);
+  color: rgba(255, 255, 255, 0);
+}
+
+/* .flip {
+  animation: flip 0.3s;
+} */
+
 @keyframes flip {
   0% {
     transform: translateY(0px) rotate3d(0, 0, 0, 0deg);
