--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -6,7 +6,7 @@
   border-radius: 3px;
   box-shadow: 0px 5px 20px -10px 0.5 rgb(0, 0, 0, 0.5);
   text-align: center;
-  width: 100px;
+  width: 120px;
   height: 80px;
   line-height: 80px;
 }
@@ -24,27 +24,27 @@
 }
 
 .red {
-  background-color: '#f55';
+  background-color: #f55;
 }
 
 .blue {
-  background-color: '#69d';
+  background-color: #69d;
 }
 
 .black {
-  background-color: '#000';
+  background-color: #000;
 }
 
 .white {
-  background-color: '#fff';
+  background-color: #fff;
 }
 
 .yellow {
-  background-color: '#bdb76b';
+  background-color: #bdb76b;
 }
 
 .default {
-  background-color: '#888';
+  background-color: #888;
 }
 
 /* .flip {
